--- a/accessibility/fix-a11y/08-index.html
+++ b/accessibility/fix-a11y/08-index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 	  <head>
@@ -125,14 +124,8 @@
 																																																																																																																																																																																								              </div>
 																																																																																																																																																																																									              </div>
 																																																																																																																																																																																										              <div class="row">
-																																																																																																																																																																																												                <div class="col-3">
-																																																																																																																																																																																															            <div>
-																																																																																																																																																																																																	                  <h3>01</h3>
-																																																																																																																																																																																																			         ="col-5">
-																																																																																																																																																																																																				             <div>
-																																																																																																																																																																																																						                   <span>About Me</span>t on our site for your convenience.</span>
-																																																																																																																																																																																																							               </div>
-																																																																																																																																																																																																								                         <label class="visually-hidden" for="email"></lemail" autocomplete="email" required aria-required="true">
-																																																																																																																																																																																																												                   <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
-																																																																																																																																																																																																														                   </div>
-																																																																																																																																																																																																																     "facebook-icon"></i></a><a href="#" aria-label="Twitter"><i cla
+																																																																																																																																																																																												                <div clclass="bottom-part">
+																																																																																																																																																																																															              <span>$199.00</span><a href=></i></a></div>
+																																																																																																																																																																																														            </div>
+																																																																																																																																																																																															              </div>
+																																																																																																																																																																																																              </d
