--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 	  <head>
@@ -125,6 +124,19 @@
 																																																																																																																																																																																									          </div>
 																																																																																																																																																																																										          <div class="row">
 																																																																																																																																																																																												            <div class="col-3">
-																																																																																																																																																																																														                 for interface</span><span>Reliable Customer Service</span></di    <div class="col-2">
-																																																																																																																																																																																																             <div class="footer-widget"><a href="#"><i class="twitter-icon"></i></a></div>
-																																																																																																																																																																																																	                 
+																																																																																																																																																																																														                <div>
+																																																																																																																																																																																																	              <h1>01</h1>
+																																																																																																																																																																																																		                    <h4>Economy</h4>
+																																																																																																																																																																																																				                  <p>For the individuals</p>
+																																																																																																																																																																																																						              </div>
+																																																																																																																																																																																																							                  <div class="package-list">
+																																																																																																																																																																																																										                <div><span>Secure Online Transfer</span><span>Unlimited Styles for intespann></div>
+																																																																																																																																																																																																												            </div>
+																																																																																																																																																																																																													                <div class="bottom-part">
+																																																																																																																																																																																																																              <h1>$199.00</h1><a href="#">Buy Now</a>
+																																																																																																																																																																																																																	                  </div>
+																																																																																																																																																																																																																			            </div>
+																																																																																																																																																																																																																				            </div>
+																																																																																																																																																																																																																					          </div>
+																																																																																																																																																																																																																						      <m-control" id="email" type="email" name="email" autocomplete="email" required aria-required="true">
+																																																																																																																																																																																																																								                   <div cla
